adding health endpoint, docker, updating readme, makefile, swagger
